# BioEMMA

./: .gitignore  LICENSE  NOTICE.md  README.md  convert_models2maps.ipynb  main.py  mapper.py  mapper_base.py  maps.py  merger.py  output.json  prepare_db_mapping.py  pyproject.toml  reader.py  requirements.txt  test.ipynb
resources/: mapping_stats.txt  metabolite_mapping.tsv
resources/BIGG/: map00010.tsv  map00020.tsv  map00030.tsv  map00040.tsv  map00051.tsv  map00052.tsv  map00053.tsv  map00061.tsv  map00062.tsv  map00071.tsv  map00072.tsv  map00100.tsv  map00120.tsv  map00130.tsv  map00140.tsv  map00230.tsv  map00240.tsv  map00250.tsv  map00253.tsv  map00260.tsv  map00270.tsv  map00280.tsv  map00290.tsv  map00300.tsv  map00310.tsv  map00311.tsv  map00330.tsv  map00340.tsv  map00350.tsv  map00360.tsv  map00362.tsv  map00380.tsv  map00400.tsv  map00401.tsv  map00402.tsv  map00410.tsv  map00430.tsv  map00440.tsv  map00450.tsv  map00460.tsv  (+71 more)
resources/SEED/: map00010.tsv  map00020.tsv  map00030.tsv  map00040.tsv  map00051.tsv  map00052.tsv  map00053.tsv  map00061.tsv  map00062.tsv  map00071.tsv  map00072.tsv  map00073.tsv  map00100.tsv  map00120.tsv  map00130.tsv  map00140.tsv  map00230.tsv  map00231.tsv  map00232.tsv  map00240.tsv  map00250.tsv  map00253.tsv  map00254.tsv  map00260.tsv  map00270.tsv  map00280.tsv  (+127 more)
scripts/: prepare_db_mapping.py
test/: ecoli_core.sbml  ecoli_core_annotation.sbml  rn00010.xml
tests/: test_imports.py  test_mapper_core.py  test_maps.py  test_merger.py  test_resources.py  test_workflow.py
utils/: id_dicts.py  metanetx_mapper.py
(+11 files in other folders)
