[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bioemma"
version = "0.2.0"
description = "Tools for building Escher-compatible metabolic maps from KEGG and model annotations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE.md"]
dependencies = [
  "numpy",
  "beautifulsoup4",
  "cobra",
  "lxml"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "build",
  "twine",
]

[project.scripts]
bioemma = "bioemma.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bioemma = ["resources/*.tsv"]
